cmake_minimum_required(VERSION 2.8)
project( CausationLib )
find_package( OpenCV REQUIRED )
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -O3" )
add_library( temporalnn temporalnn.cc )
add_library( nnvisualizer nnvisualizer.cc )
add_executable( causation causation.cc )
add_executable( netpeek netpeek.cc )
target_link_libraries( causation ${OpenCV_LIBS} temporalnn nnvisualizer )
target_link_libraries( netpeek ${OpenCV_LIBS} temporalnn nnvisualizer )
